fixed up main content area

--- a/home.html
+++ b/home.html
@@ -26,15 +26,22 @@
         
             <!-- main content -->
             <div class="main-content">
+                <div class="txt-btn-container">
                 <!-- text-wrapper-->
                 <div class="text-wrapper">
-                    <h1> Welcome! </h1>
-                    <h3>I am Alan, and I am a full stack developer.</h3>
+                    <div class="header-wrapper">
+                        <h1>Hi there!</h1>
+                    </div>
+                    <div class="header-wrapper">
+                        <h3>I am Alan, and I am a full stack* developer.</h3>
+                    </div>
                 </div>
                 <!-- button-wrapper-->
                 <div class="button-wrapper">
-                    <!--<p> button wrapper here</p>-->
-                    <a href="/portfolio" class="btn-link">Portfolio</a>
+                    <a href="portfolio.html" class="btn-link">Portfolio</a>
+                    <a href="contact.html" class="btn-link">Contact</a>
+                </div>
+
                 </div>
             </div>
         </div> <!-- closes middle row-->
