basic aside bar and main content, looks decent

--- a/home.html
+++ b/home.html
@@ -21,7 +21,16 @@
         <div class="middle-row">
             <!-- aside bar -->
             <div class="side-content">
-                <p>Hi' I appear on the side</p>
+               <div class="side-content-container">
+                   <!-- Profile Picture-->
+                    <div class="profile-pic-wrapper">
+                        <img class="profile-pic" src="static/images/boltonProfile.jpg" alt="profile picture of me climbing">
+                        <h2>Alan Chu</h2>
+                    </div>
+                    <!-- Nav Bar-->
+                    
+                    <!-- Contact -->
+               </div>
             </div>
         
             <!-- main content -->
@@ -30,10 +39,10 @@
                 <!-- text-wrapper-->
                 <div class="text-wrapper">
                     <div class="header-wrapper">
-                        <h1>Hi there!</h1>
+                        <h1>Hi I'm Alan</h1>
                     </div>
                     <div class="header-wrapper">
-                        <h3>I am Alan, and I am a full stack* developer.</h3>
+                        <h3>I am a full stack* web developer.</h3>
                     </div>
                 </div>
                 <!-- button-wrapper-->
