added some font awesome icons, on home. Should align them later

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,9 @@
                    <!-- Profile Picture-->
                     <div class="profile-pic-wrapper">
                         <img class="profile-pic" src="static/images/boltonProfile.jpg" alt="profile picture of me climbing">
+                    </div>
+                    <!-- Profile header-->
+                    <div class="profile-header-wrapper">
                         <h2>Alan Chu</h2>
                     </div>
                     <!-- Nav Bar-->
