got rid of buttons on hero page

--- a/home.html
+++ b/home.html
@@ -30,6 +30,7 @@
                     <!-- Profile header-->
                     <div class="side-header-wrapper">
                         <h2>Alan Chu</h2>
+                        <p>Coder // Climber // Photographer</p>
                     </div>
                     <!-- Nav Bar-->
                     <div class="side-nav-wrapper">
@@ -70,10 +71,10 @@
                     </div>
                 </div>
                 <!-- button-wrapper-->
-                <div class="button-wrapper">
+                <!--<div class="button-wrapper">
                     <a href="portfolio.html" class="btn-link">Portfolio</a>
                     <a href="contact.html" class="btn-link">Contact</a>
-                </div>
+                </div>-->
 
                 </div>
             </div>
