different home message

--- a/home.html
+++ b/home.html
@@ -64,10 +64,12 @@
                 <!-- text-wrapper-->
                 <div class="text-wrapper">
                     <div class="header-wrapper">
-                        <h1>Hi I'm Alan</h1>
+                        <!--<h1>Hi I'm Alan</h1>-->
+                        <h1>Alan Chu</h1>
                     </div>
                     <div class="header-wrapper">
-                        <h3>I am a full stack* web developer.</h3>
+                        <!--<h3>I am a full stack* web developer.</h3>-->
+                        <h3>Full stack* web developer</h3>
                     </div>
                 </div>
                 <!-- button-wrapper-->
