changed the css & added a bluring effect on the background

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,8 @@
     <title>Portfolio | Alan Chu </title>
 </head>
 <body>
+    <div class="bg-image">
+    </div>
     <div class="container">
         <!-- top row-->
         <div class="top-row">
