--- a/home.html
+++ b/home.html
@@ -12,6 +12,9 @@
     <title>Home | Alan Chu </title>
 </head>
 <body>
+    <div class="bg-image">
+    </div>
+    
     <div class="container">
         <!-- top row-->
         <div class="top-row">
