taking out bluring effect

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/portfolio.css">
 
     <!-- fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Portfolio | Alan Chu </title>
@@ -93,9 +93,26 @@
                             <img src="https://placekitten.com/g/200/200" alt="">
                         </div>
                       </li>
+
                       <!-- Project 2 details-->
-                      <li class="project">
-                          <p>project 2 details here</p>
+                       <li class="project">
+                        <!-- project1 text-->
+                        <div class="project-text">
+                          <h3 class="project-title">Project Title</h3>
+                          <h6 class="project-subtitle">Project subtitle</h6>
+                          <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam vel, at amet consectetur non quas, mollitia aliquid odio ipsam, illum tenetur doloremque corrupti odit, minus incidunt molestias voluptatum quibusdam repudiandae!</p>
+                          <div class="project-technologies">
+                              <ul class="tech-tags">
+                                  <li>HTML</li>
+                                  <li>CSS</li>
+                                  <li>JavaScript</li>
+                              </ul>
+                          </div>
+                        </div>
+                        <!-- project 1 img-->
+                        <div class="project-img">
+                            <img src="https://placekitten.com/g/200/200" alt="">
+                        </div>
                       </li>
                   </ul>
 
